syntax = "proto3";

option go_package = "genprotos/user";

package proto;

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserByID (GetUserByIDRequest) returns (GetUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc GetAllUser (GetAllUserRequest) returns (GetAllUserResponse);
}

message CreateUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    int32 age = 4;
}

message CreateUserResponse {
    bool success = 1;
    string message = 2;
}

message GetUserByIDRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    int32 age = 5;
}

message UpdateUserResponse {
    bool success = 1;
    string message = 2;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    int32 age = 5;
}


message GetAllUserRequest{
    User user = 1;
}

message GetAllUserResponse{
    repeated User user = 1;
}